[UPD] feat(consumer): Fix some consumer issues.
* The 'degree' consumer was used in the global config but not defined in 'uclouvain.cfg',
  so I added the definition back to the file.
* The consumer 'CataretroFacultyMetadataConsumer' was defined but never executed due to a condition returning false everytime.
  Changed that condition to be correct and the consumer seems to work fine !

Authored-by: Michaël Pourbaix <michael.pourbaix@uclouvain.be>